Add more example script and update Note.ipynb

--- a/Note.ipynb
+++ b/Note.ipynb
@@ -2,7 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Tensorflow and ProtocolBuffer\n",
+    "\n",
+    "In this talk, I'll try to explain how `tensorflow` internally use `protobuf` as serialization tool and how serialized object works under the hook.\n",
+    "\n",
+    "If you are not familiar with `protobuf`, I wrote a simplified version of neural network serialization with `protobuf` over [here](https://medium.com/@dboyliao/簡介-google-protocol-buffer-1dd5fa2e1e69).\n",
+    "\n",
+    "Oh, It's written in chinese :P\n",
+    "\n",
+    "Let's dive into the source code of `tensorflow`!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### What does `tf.train.Saver.save` do?\n",
     "\n",
@@ -23,7 +46,23 @@
     "`.meta` file --> protobuf file `MetaGraphDef`\n",
     "\n",
     "`.data-????-of-????` and `.index` files --> protobuff file for restoring variables\n",
-    "  \n",
+    "\n",
+    "- In the `saver.save` call, `.data` and `.index` files are created with a call to `sess.run` which will invoke an operation node build by `saver`'s builder (See `Saver.__init__` for detail)\n",
+    "- After that, a checkpoint path will be returned.\n",
+    "\n",
+    "![write_tensors](images/saver_write_tensors.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### MetaGraph\n",
+    "\n",
     "Basically `save_path` is used to detemine:\n",
     "1. the path and prefix of saved files\n",
     "2. updating `checkpoint` file\n",
@@ -40,9 +79,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "----\n",
     "\n",
     "### `tf.train.Saver.export_meta_graph`\n",
     "\n",
@@ -57,16 +99,18 @@
     "\n",
     "![export-meta](images/export_meta_graph.png)\n",
     "\n",
-    "Again, a wrapped call to `meta_graph.export_scoped_meta_graph`.\n",
-    "\n",
-    "----"
+    "Again, a wrapped call to `meta_graph.export_scoped_meta_graph`."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "The source code of `meta_graph.export_scoped_meta_graph` though is not long but requires famililarity with `ProtocolBuffer`, a serailization tool developed by Google. I'll not explain it in this note but you can check those `.proto` files listed below to see the **definitions** for these protobuff objects.\n",
+    "Basically, what the source code of `meta_graph.export_scoped_meta_graph` do is to construct an instance of `MetaGraphDef`, a class created by protobuf compiler, and save it to disk with standard `protobuf` API. I list a few `.proto` files below, check it out if you want to see the **definitions** for these protobuff objects.\n",
     "\n",
     "- [meta_graph.proto](https://github.com/tensorflow/tensorflow/blob/r1.3/tensorflow/core/protobuf/meta_graph.proto)\n",
     "- [saver.proto](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/core/protobuf/saver.proto)\n",
@@ -75,8 +119,8 @@
     "\n",
     "There are many more of them, good luck!\n",
     "\n",
-    "Conceptually, what `meta_graph.export_scoped_meta_graph` does is that exporting data (saver version, op names, ...etc) which can be used to restore the metagraph, which can be used to restore a computational graph. Like this:\n",
     "\n",
+    "So, the call stacks to `export_meta_graph` will looks like this:\n",
     "```\n",
     "export_meta_graph\n",
     "  --> meta_graph.export_scoped_meta_graph\n",
@@ -85,8 +129,7 @@
     "         --> save the meta_graph_def to disk (xxx.meta)\n",
     "```\n",
     "\n",
-    "Similary, the method call to `tf.train.import_meta_graph` will reverse above process as follwoing:\n",
-    "\n",
+    "Similary, the call stacks to `tf.train.import_meta_graph` will reverse above process as follwoing:\n",
     "```\n",
     "import_meta_grph\n",
     "  --> meta_graph.read_meta_graph_file to reconstruct meta_graph_def protobuf object\n",
@@ -96,16 +139,18 @@
     "\n",
     "Why returning a saver? What is it for?\n",
     "\n",
-    "Well, we can only reconstruct the graph from a meta graph and the variables in the graph are not yet initialized.\n",
+    "Well, we can only reconstruct the graph from a metagraph and the variables in the graph are not yet initialized.\n",
     "\n",
-    "\n",
-    "\n",
-    "---"
+    "So the saver here is for initializing (restoring) the value of all the tensors in the graph."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### What does tf.Saver.restore do?\n",
     "\n",
@@ -115,16 +160,127 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Simple Summary for Session Saving/Restoration\n",
+    "\n",
+    "1. Saving to Disk:\n",
+    "  - `saver.save`\n",
+    "    - saving tensor values to `.data` and `.index` file\n",
+    "    - saving metagraph to `.meta`\n",
+    "2. Restoration from Disk:\n",
+    "  - restore metagraph, a graph consists of saver and graph\n",
+    "    - `tf.train.import_meta_graph`\n",
+    "  - restore session with restored saver\n",
+    "    - `saver.restore`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## You Graph, Freeze!\n",
+    "\n",
+    "As you can see, saving a session will create three files at a time, `.data`, `.index` and `.meta`.\n",
+    "\n",
+    "It's convenient for prototyping, experiments..etc, but, as for me, I prefer saving my graph in a more compact format when I just want to *use* the graph (like running the trained graph in mobile device). \n",
+    "\n",
+    "Fortunately, `tensorflow` provides some util functions you can use to **freeze** your graph into a more compat format, with just *one* output file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### tensorflow.python.framework.graph_util.convert_variables_to_constants\n",
+    "\n",
+    "- As what its name suggests, `convert_variables_to_constant` will do two things:\n",
+    "  1. `extract_sub_graph`: extract sub graph from given `GraphDef` using BFS (Breath First Search).\n",
+    "  2. construct a new `GraphDef` object and copy the value of all variables in the input `GraphDef` in given session.\n",
+    "\n",
+    "![freeze-convert-const](images/convert_const.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The next step is simple, just save returned `GraphDef` object (`SerializeToString`):\n",
+    "\n",
+    "![save-graphdef](images/save_graph_def.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Then load the graph as following:\n",
+    "\n",
+    "![load-graphdef](images/load_graph_def.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "My demo is about showing you how to serve your graph the **hard** way\n",
+    "\n",
+    "You can simply use util scripts provided by `tensorflow`, [freeze_graph.py](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/python/tools/freeze_graph.py).\n",
+    "\n",
+    "But by now, you should be able to understand what is going on in that script."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Thanks for Your Attension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Q&A"
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -140,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
