Add custom.css and adjust the layout of Note.ipynb

--- a/Note.ipynb
+++ b/Note.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "### What does `tf.train.Saver.save` do?\n",
     "\n",
-    "```{python}\n",
+    "```\n",
     "tf.train.Saver.save(self, sess, save_path, global_step=None, latest_filename=None, meta_graph_suffix='meta', write_meta_graph=True, write_state=True)\n",
     "```\n",
     "\n",
@@ -41,12 +41,19 @@
     "2. save_path (`str`): the path where to write model checkpoint files, used to generate files below\n",
     "  - **`(save_path)`-`(global_step)`.meta**\n",
     "  - **`(save_path)`.data-`(step)`-of-`(total)`**\n",
-    "  - **`(save_path)`-`(global_step)`.index**\n",
-    "\n",
-    "`.meta` file --> protobuf file `MetaGraphDef`\n",
-    "\n",
-    "`.data-????-of-????` and `.index` files --> protobuff file for restoring variables\n",
-    "\n",
+    "  - **`(save_path)`-`(global_step)`.index**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- `.meta` file --> protobuf file `MetaGraphDef`\n",
+    "- `.data-????-of-????` and `.index` files --> protobuff file for restoring variables\n",
     "- In the `saver.save` call, `.data` and `.index` files are created with a call to `sess.run` which will invoke an operation node build by `saver`'s builder (See `Saver.__init__` for detail)\n",
     "- After that, a checkpoint path will be returned.\n",
     "\n",
@@ -88,13 +95,23 @@
     "\n",
     "### `tf.train.Saver.export_meta_graph`\n",
     "\n",
-    "```tf.train.Saver.export_meta_graph(self, filename=None, collection_list=None, as_text=False, export_scope=None, clear_devices=False)\n",
+    "```\n",
+    "tf.train.Saver.export_meta_graph(self, filename=None, collection_list=None, as_text=False, export_scope=None, clear_devices=False)\n",
     "```\n",
     "\n",
     "The source code is as following:\n",
     "\n",
-    "![saver-export-meta](images/saver_export_meta_graph.png)\n",
-    "\n",
+    "![saver-export-meta](images/saver_export_meta_graph.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "As you can see, it's just a wrapper method for calling `export_meta_graph` function, which is defined in the same source file.\n",
     "\n",
     "![export-meta](images/export_meta_graph.png)\n",
@@ -117,9 +134,17 @@
     "- [graph.proto](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/core/framework/graph.proto)\n",
     "- [node_def.proto](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/core/framework/node_def.proto)\n",
     "\n",
-    "There are many more of them, good luck!\n",
-    "\n",
-    "\n",
+    "There are many more of them, good luck!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "So, the call stacks to `export_meta_graph` will looks like this:\n",
     "```\n",
     "export_meta_graph\n",
