Update Note notebook and add a few more images

--- a/Note.ipynb
+++ b/Note.ipynb
@@ -29,12 +29,17 @@
    "source": [
     "### What does `tf.train.Saver.save` do?\n",
     "\n",
-    "```\n",
-    "tf.train.Saver.save(self, sess, save_path, global_step=None, latest_filename=None, meta_graph_suffix='meta', write_meta_graph=True, write_state=True)\n",
-    "```\n",
-    "\n",
-    "[source code](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/python/training/saver.py)\n",
-    "\n",
+    "[source code](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/python/training/saver.py#L1462)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "Two required arguements:\n",
     "\n",
     "1. sess (`tf.Session`): a tensorflow Session object\n",
@@ -95,10 +100,6 @@
     "\n",
     "### `tf.train.Saver.export_meta_graph`\n",
     "\n",
-    "```\n",
-    "tf.train.Saver.export_meta_graph(self, filename=None, collection_list=None, as_text=False, export_scope=None, clear_devices=False)\n",
-    "```\n",
-    "\n",
     "The source code is as following:\n",
     "\n",
     "![saver-export-meta](images/saver_export_meta_graph.png)"
@@ -112,11 +113,9 @@
     }
    },
    "source": [
-    "As you can see, it's just a wrapper method for calling `export_meta_graph` function, which is defined in the same source file.\n",
+    "It's just a wrapper method for calling `export_meta_graph` function, which is defined in the same source file as `Saver`.\n",
     "\n",
-    "![export-meta](images/export_meta_graph.png)\n",
-    "\n",
-    "Again, a wrapped call to `meta_graph.export_scoped_meta_graph`."
+    "<img alt=\"export-meta\" src=\"images/export_meta_graph.png\">"
    ]
   },
   {
@@ -147,26 +146,47 @@
    "source": [
     "So, the call stacks to `export_meta_graph` will looks like this:\n",
     "```\n",
-    "export_meta_graph\n",
-    "  --> meta_graph.export_scoped_meta_graph\n",
-    "    --> build graph_def from default graph or given graph\n",
-    "       -->create a meta_graph_def by the graph_def\n",
-    "         --> save the meta_graph_def to disk (xxx.meta)\n",
+    "saver.export_meta_graph\n",
+    "  --> export_meta_graph\n",
+    "    --> meta_graph.export_scoped_meta_graph\n",
+    "        1. build graph_def from default graph or given graph\n",
+    "        2. create a meta_graph_def by the graph_def\n",
+    "        3. save the meta_graph_def to disk (xxx.meta)\n",
     "```\n",
     "\n",
     "Similary, the call stacks to `tf.train.import_meta_graph` will reverse above process as follwoing:\n",
     "```\n",
     "import_meta_grph\n",
-    "  --> meta_graph.read_meta_graph_file to reconstruct meta_graph_def protobuf object\n",
-    "    --> meta_graph.import_scoped_meta_graph to reconstruct the graph object\n",
-    "      --> return a saver which can be used to restore the session\n",
-    "```\n",
+    "  --> meta_graph.read_meta_graph_file to reconstruct MetaGraphDef object\n",
+    "    --> meta_graph.import_scoped_meta_graph to construct a new Graph object\n",
+    "      --> return a Saver object.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Why returning a `Saver`? \n",
     "\n",
-    "Why returning a saver? What is it for?\n",
+    "What is it for?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "By now, we only reconstruct the graph from a metagraph and the variables in the graph are not yet initialized.\n",
     "\n",
-    "Well, we can only reconstruct the graph from a metagraph and the variables in the graph are not yet initialized.\n",
-    "\n",
-    "So the saver here is for initializing (restoring) the value of all the tensors in the graph."
+    "So, the saver here is for initializing (restoring) the value of all the tensors in the graph."
    ]
   },
   {
@@ -192,7 +212,7 @@
     }
    },
    "source": [
-    "## Simple Summary for Session Saving/Restoration\n",
+    "## Summary for Session Saving/Restoration\n",
     "\n",
     "1. Saving to Disk:\n",
     "  - `saver.save`\n",
@@ -216,10 +236,28 @@
    "source": [
     "## You Graph, Freeze!\n",
     "\n",
-    "As you can see, saving a session will create three files at a time, `.data`, `.index` and `.meta`.\n",
-    "\n",
-    "It's convenient for prototyping, experiments..etc, but, as for me, I prefer saving my graph in a more compact format when I just want to *use* the graph (like running the trained graph in mobile device). \n",
-    "\n",
+    "As you can see, saving a session will create three files at a time, `.data`, `.index` and `.meta`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "It's convenient for prototyping, experiments..etc, but, as for me, I prefer saving my graph in a more compact format when I just want to *use* the graph (like running the trained graph in a mobile device). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "Fortunately, `tensorflow` provides some util functions you can use to **freeze** your graph into a more compat format, with just *one* output file."
    ]
   },
@@ -274,11 +312,56 @@
     }
    },
    "source": [
+    "### `tf.import_graph_def`\n",
+    "\n",
+    "The source code is meaty, let me just summarize the core steps here:\n",
+    "\n",
+    "1. Use **`tf.Graph.create_op`** to create/copy `Operation`s defined in given `GraphDef` into new graph object. [create_op](https://www.tensorflow.org/api_docs/python/tf/Graph#create_op)\n",
+    "2. Link all nodes together according to attribute value, `inputs`, defined in `node_def.proto`. ([source code](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/core/framework/node_def.proto))\n",
+    "  - Add inputs with `tf.Graph._add_control_input` or `tf.Graph._add_input`\n",
+    "  - Setup shapes for non-function operation node.\n",
+    "![import-graph-def-core](images/import_graph_def_core.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Step 1\n",
+    "\n",
+    "![import-graph-def-1](images/import_graph_def_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Step 2\n",
+    "\n",
+    "<img alt=\"import-graph-def-2\" src=\"images/import_graph_def_2.png\" height=\"500\" width='500'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "My demo is about showing you how to serve your graph the **hard** way\n",
     "\n",
     "You can simply use util scripts provided by `tensorflow`, [freeze_graph.py](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/python/tools/freeze_graph.py).\n",
     "\n",
-    "But by now, you should be able to understand what is going on in that script."
+    "By now, you should be able to understand what is going on in that script."
    ]
   },
   {
@@ -289,7 +372,7 @@
     }
    },
    "source": [
-    "# Thanks for Your Attension"
+    "# Thanks for Your Attention"
    ]
   },
   {
