Update README.md and custom.css

--- a/Note.ipynb
+++ b/Note.ipynb
@@ -8,14 +8,63 @@
     }
    },
    "source": [
-    "## Tensorflow and ProtocolBuffer\n",
+    "# Tensorflow and ProtocolBuffer\n",
     "\n",
+    "## Object Serialization in Depth\n",
+    "\n",
+    "<br>\n",
+    "<div>\n",
+    "<h3><font color=#C7741B>Dboy Liao</font></h3>\n",
+    "<ul>\n",
+    "<li><font color=#DA8321>qmalliao@gmail.com </font></li>\n",
+    "<li><a href=\"https://github.com/dboyliao\">https://github.com/dboyliao</a></li>\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "In this talk, I'll try to explain how `tensorflow` internally use `protobuf` as serialization tool and how serialized object works under the hook.\n",
     "\n",
     "If you are not familiar with `protobuf`, I wrote a simplified version of neural network serialization with `protobuf` over [here](https://medium.com/@dboyliao/簡介-google-protocol-buffer-1dd5fa2e1e69).\n",
     "\n",
-    "Oh, It's written in chinese :P\n",
+    "Oh, It's written in chinese :P"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Typical Use Case\n",
     "\n",
+    "- Training\n",
+    "  - save session status with `tf.train.Saver.save`\n",
+    "  - restore session with `tf.train.Saver.restore` for upcoming experiments\n",
+    "\n",
+    "\n",
+    "- Deployment\n",
+    "  - serve the model in a loadable binary format\n",
+    "  - `tf.GraphDef` (is it a `tf.Graph`?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "Let's dive into the source code of `tensorflow`!"
    ]
   },
