--- a/Note.ipynb
+++ b/Note.ipynb
@@ -18,6 +18,7 @@
     "<ul>\n",
     "<li><font color=#DA8321>qmalliao@gmail.com </font></li>\n",
     "<li><a href=\"https://github.com/dboyliao\">https://github.com/dboyliao</a></li>\n",
+    "<li><a href=\"https://www.facebook.com/dboyliao\">https://www.facebook.com/dboyliao</a></li>\n",
     "</ul>\n",
     "</div>"
    ]
@@ -91,8 +92,8 @@
    "source": [
     "Two required arguements:\n",
     "\n",
-    "1. sess (`tf.Session`): a tensorflow Session object\n",
-    "2. save_path (`str`): the path where to write model checkpoint files, used to generate files below\n",
+    "1. **sess** (`tf.Session`): a tensorflow Session object\n",
+    "2. **save_path** (`str`): the path where to write model checkpoint files, used to generate files below\n",
     "  - **`(save_path)`-`(global_step)`.meta**\n",
     "  - **`(save_path)`.data-`(step)`-of-`(total)`**\n",
     "  - **`(save_path)`-`(global_step)`.index**"
@@ -106,9 +107,9 @@
     }
    },
    "source": [
-    "- `.meta` file --> protobuf file `MetaGraphDef`\n",
-    "- `.data-????-of-????` and `.index` files --> protobuff file for restoring variables\n",
-    "- In the `saver.save` call, `.data` and `.index` files are created with a call to `sess.run` which will invoke an operation node build by `saver`'s builder (See `Saver.__init__` for detail)\n",
+    "- **`.meta`** file --> `MetaGraphDef` protobuf file\n",
+    "- **`.data-????-of-????`** and **`.index`** files --> protobuff file for restoring variables/tensors\n",
+    "- In the `saver.save` call, `.data` and `.index` files are created with a `sess.run` call which will invoke an operation node, created by `saver`'s builder (See `Saver.__init__` for detail)\n",
     "- After that, a checkpoint path will be returned.\n",
     "\n",
     "![write_tensors](images/saver_write_tensors.png)"
@@ -124,11 +125,11 @@
    "source": [
     "### MetaGraph\n",
     "\n",
-    "Basically `save_path` is used to detemine:\n",
+    "Basically **`save_path`** is used to detemine:\n",
     "1. the path and prefix of saved files\n",
     "2. updating `checkpoint` file\n",
     "\n",
-    "Once `tf.train.Saver` generate file names according to `save_path` and `global_step`, it moves to export **meta graph**\n",
+    "Once `tf.train.Saver` generate files for variables/tensors, it'll then export a **meta graph**\n",
     "\n",
     "The source code is as following:\n",
     "\n",
@@ -175,12 +176,13 @@
     }
    },
    "source": [
-    "Basically, what the source code of `meta_graph.export_scoped_meta_graph` do is to construct an instance of `MetaGraphDef`, a class created by protobuf compiler, and save it to disk with standard `protobuf` API. I list a few `.proto` files below, check it out if you want to see the **definitions** for these protobuff objects.\n",
+    "Basically, what `meta_graph.export_scoped_meta_graph` does is to construct an instance of `MetaGraphDef`, a class created by protobuf compiler, and save it to disk with standard `protobuf` API. I list a few `.proto` files below, check it out if you want to see the **definitions** for these protobuff objects.\n",
     "\n",
     "- [meta_graph.proto](https://github.com/tensorflow/tensorflow/blob/r1.3/tensorflow/core/protobuf/meta_graph.proto)\n",
     "- [saver.proto](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/core/protobuf/saver.proto)\n",
     "- [graph.proto](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/core/framework/graph.proto)\n",
     "- [node_def.proto](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/core/framework/node_def.proto)\n",
+    "- [tensor.proto](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/core/framework/tensor.proto)\n",
     "\n",
     "There are many more of them, good luck!"
    ]
@@ -193,7 +195,7 @@
     }
    },
    "source": [
-    "So, the call stacks to `export_meta_graph` will looks like this:\n",
+    "So, the calling stacks to `export_meta_graph` will looks like this:\n",
     "```\n",
     "saver.export_meta_graph\n",
     "  --> export_meta_graph\n",
@@ -203,7 +205,7 @@
     "        3. save the meta_graph_def to disk (xxx.meta)\n",
     "```\n",
     "\n",
-    "Similary, the call stacks to `tf.train.import_meta_graph` will reverse above process as follwoing:\n",
+    "Similary, the calling stacks to `tf.train.import_meta_graph` will reverse above process as follwoing:\n",
     "```\n",
     "import_meta_grph\n",
     "  --> meta_graph.read_meta_graph_file to reconstruct MetaGraphDef object\n",
@@ -235,7 +237,7 @@
    "source": [
     "By now, we only reconstruct the graph from a metagraph and the variables in the graph are not yet initialized.\n",
     "\n",
-    "So, the saver here is for initializing (restoring) the value of all the tensors in the graph."
+    "So, the saver here is for initializing/restoring the value of all the tensors in the graph."
    ]
   },
   {
